; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_env.c_test_core_env__1.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_env.c_test_core_env__1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"nonexistentfile\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"HOME\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"doesnotexist\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_env__1() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* @GIT_ENOTFOUND, align 4
  %4 = call i32 @git_sysdir_find_global_file(i32* %1, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @cl_assert_equal_i(i32 %3, i32 %4)
  %6 = call i32 @cl_setenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = call i32 (...) @set_global_search_path_from_env()
  %9 = load i32, i32* @GIT_ENOTFOUND, align 4
  %10 = call i32 @git_sysdir_find_global_file(i32* %1, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @cl_assert_equal_i(i32 %9, i32 %10)
  %12 = call i32 @cl_setenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* null)
  %13 = call i32 @cl_git_pass(i32 %12)
  %14 = call i32 (...) @set_global_search_path_from_env()
  %15 = call i32 (...) @set_system_search_path_from_env()
  %16 = load i32, i32* @GIT_ENOTFOUND, align 4
  %17 = call i32 @git_sysdir_find_global_file(i32* %1, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %18 = call i32 @cl_assert_equal_i(i32 %16, i32 %17)
  %19 = load i32, i32* @GIT_ENOTFOUND, align 4
  %20 = call i32 @git_sysdir_find_system_file(i32* %1, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %21 = call i32 @cl_assert_equal_i(i32 %19, i32 %20)
  %22 = call i32 @git_buf_dispose(i32* %1)
  ret void
}

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_sysdir_find_global_file(i32*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @cl_setenv(i8*, i8*) #1

declare dso_local i32 @set_global_search_path_from_env(...) #1

declare dso_local i32 @set_system_search_path_from_env(...) #1

declare dso_local i32 @git_sysdir_find_system_file(i32*, i8*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
